# CrewAI

coderai/: README.md  pyproject.toml
coderai/output/: CSharp.md  cobol.md  code_and_output.txt
coderai/src/coderai/: crew.py  main.py
coderai/src/coderai/config/: agents.yaml  tasks.yaml
debate/: pyproject.toml
debate/knowledge/: user_preference.txt
debate/output/: decide.md  oppose.md  propose.md
debate/src/debate/: crew.py  main.py
debate/src/debate/config/: GeminiAgents.yaml
engineeringteam/: README.md  pyproject.toml
engineeringteam/output/: CSharp_accounts.cs_code.cs  CSharp_accounts.cs_design.md  CSharp_app.cs  CSharp_test_accounts.cs  accounts.cs  accounts.py  accounts_design_cs_.md  accounts_design_py_.md  app.cs  app.py  python_accounts.py_code.py  python_accounts.py_design.md  python_app.py  python_test_accounts.py  test_accounts  test_accounts.cs  test_accounts.py
engineeringteam/src/engineeringteam/: crew.py  main.py
engineeringteam/src/engineeringteam/config/: agents.yaml  tasks.yaml
financialResearcher/: README.md  pyproject.toml
financialResearcher/output/: report.md
financialResearcher/src/financialresearcher/: crew.py  main.py
financialResearcher/src/financialresearcher/config/: agents.yaml  tasks.yaml
stockpicker/: README.md  pyproject.toml
stockpicker/memory/: chroma.sqlite3  long_term_memory_storage.db
stockpicker/output/: decision.md  research_report.json  trending_companies.json
stockpicker/src/stockpicker/: crew.py  main.py
stockpicker/src/stockpicker/config/: agents.yaml  tasks.yaml
stockpicker/src/stockpicker/tools/: push_tool.py
