[project]
name = "coderai"
version = "0.1.0"
description = "CoderAI using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
coderai = "coderai.main:run"
run_crew = "coderai.main:run"
train = "coderai.main:train"
replay = "coderai.main:replay"
test = "coderai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
