[project]
name = "engineeringteam"
version = "0.1.0"
description = "engineeringTeam using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0",
    "gradio>=5.38.0",
]

[project.scripts]
engineeringteam = "engineeringteam.main:run"
run_crew = "engineeringteam.main:run"
train = "engineeringteam.main:train"
replay = "engineeringteam.main:replay"
test = "engineeringteam.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
