[project]
name = "financialresearcher"
version = "0.1.0"
description = "financialresearcher using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.141.0,<1.0.0"
]

[project.scripts]
financialresearcher = "financialresearcher.main:run"
run_crew = "financialresearcher.main:run"
train = "financialresearcher.main:train"
replay = "financialresearcher.main:replay"
test = "financialresearcher.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
